--- a/index.html
+++ b/index.html
@@ -26,7 +26,19 @@
         </div>
     </header>
     <main>
-
+        <section class="container feature">
+            <div class="feature_title">
+                <h3>Our Featured Flowers</h3>
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                </p>
+            </div>
+            <div class="featured_img_container">
+                <div class="featured_img featured_img_1"><img src="images/pngwing 6.png" alt=""></div>
+                <div class="featured_img featured_img_2"><img src="images/pngwing 5.png" alt=""></div>
+                <div class="featured_img featured_img_3"><img src="images/pngwing 7.png" alt=""></div>
+            </div>
+        </section>
     </main>
     <footer>
 
