adding image overlay on feature photos

--- a/index.html
+++ b/index.html
@@ -34,9 +34,20 @@
                 </p>
             </div>
             <div class="featured_img_container">
-                <div class="featured_img featured_img_1"><img src="images/pngwing 6.png" alt=""></div>
-                <div class="featured_img featured_img_2"><img src="images/pngwing 5.png" alt=""></div>
-                <div class="featured_img featured_img_3"><img src="images/pngwing 7.png" alt=""></div>
+                <div class="featured_img featured_img_1">
+                    <img src="images/pngwing 6.png" alt="">
+                    <div class="image_caption">
+                        <p>
+                            <a href="#">Pink Flower Tree</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="featured_img featured_img_2">
+                    <img src="images/pngwing 5.png" alt="">
+                </div>
+                <div class="featured_img featured_img_3">
+                    <img src="images/pngwing 7.png" alt="">
+                </div>
             </div>
         </section>
     </main>
