complete sale part

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="featured_img_container">
                 <div class="featured_img featured_img_1">
                     <img src="images/pngwing 6.png" alt="">
-                    <div class="image_caption">
+                    <div class="image_caption image_caption_1">
                         <p>
                             <a href="#">Pink Flower Tree</a>
                         </p>
@@ -44,9 +44,47 @@
                 </div>
                 <div class="featured_img featured_img_2">
                     <img src="images/pngwing 5.png" alt="">
+                    <div class="image_caption image_caption_2">
+                        <p>
+                            <a href="#">Pink Flower Tree</a>
+                        </p>
+                    </div>
                 </div>
                 <div class="featured_img featured_img_3">
                     <img src="images/pngwing 7.png" alt="">
+                    <div class="image_caption image_caption_3">
+                        <p>
+                            <a href="#">Pink Flower Tree</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container service">
+            <div class="service_box">
+                <img src="images/Group 57.png" alt="">
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div class="service_box">
+                <img src="images/Group 58.png" alt="">
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div class="service_box">
+                <img src="images/Group 59.png" alt="">
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+        </section>
+        <section class="sale_section">
+            <div class="container sale_container">
+                <div class="sale_post">
+                    <h2>Hot Deal ! Sale Up To 25% <span>Off</span></h2>
+                    <p>
+                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                    </p>
+                    <button class="btn sale_btn">Sign In</button>
+                </div>
+                <div class="sale_img">
+                    <img src="images/pngwing 8.png" alt="">
                 </div>
             </div>
         </section>
