new exrta section payment added

--- a/index.html
+++ b/index.html
@@ -141,6 +141,49 @@
                 </div>
             </div>
         </section>
+        <section class="payment_section">
+            <div class="container main_payment">
+                <div class="payment_box">
+                    <div class="payment_title">
+                        <h3>Tearms</h3>
+                    </div>
+                    <div class="payment_infor">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor. <br><br>
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                            nulla.
+                        </p>
+                    </div>
+                </div>
+                <div class="payment_box">
+                    <div class="payment_title">
+                        <h3>Payment</h3>
+                    </div>
+                    <div class="payment_infor payment_infor_mid">
+                        <p>Payment methods:</p>
+                        <ol>
+                            <li>VISA</li>
+                            <li>MasterCard</li>
+                            <li>PayPal</li>
+                            <li>American Express</li>
+                        </ol>
+                    </div>
+                </div>
+                <div class="payment_box">
+                    <div class="payment_title">
+                        <h3>Shipping</h3>
+                    </div>
+                    <div class="payment_infor">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            ut labore et dolore magna aliqua. <br><br>
+                            <span class="paymen_infor_span">Free shipping for <br>Premium</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="payment_btn"><button class="btn">Order Now</button></div>
+        </section>
     </main>
     <footer class="footer_section">
         <div class="container footer_container">
