final submission and done the project

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <li><a class="btn menu_item" href="#service">Services</a></li>
                     <li><a class="btn menu_item" href="#sale_section">Sales</a></li>
                     <li><a class="btn menu_item" href="#instagram">Instagra</a></li>
+                    <li><a class="btn menu_item" href="#order">Order</a></li>
                 </ul>
             </div>
         </nav>
@@ -141,7 +142,7 @@
                 </div>
             </div>
         </section>
-        <section class="payment_section">
+        <section id="order" class="payment_section">
             <div class="container main_payment">
                 <div class="payment_box">
                     <div class="payment_title">
